--- a/app/server/templates/server/server_edit.html
+++ b/app/server/templates/server/server_edit.html
@@ -1,33 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
+    {% from "forms/macros.html" import render_field %}
 
     <div class="container">
 
       <form class="form" method="post" name="server/new">
-        {{serverform.hidden_tag()}}
+        {{ serverform.csrf_token }}
         <h2 class="form">Edit server</h2>
-
-        {{serverform.name(class_="input-block-level",placeholder="Name")}}
-        {% for error in serverform.errors.name %}
-        <span style="color: red;">[{{error}}]</span>
-        {% endfor %}
-
-        {{serverform.address(class_="input-block-level",placeholder="Address")}}
-        {% for error in serverform.errors.address %}
-        <span style="color: red;">[{{error}}]</span>
-        {% endfor %}
-
-        {{serverform.login(class_="input-block-level",placeholder="Login")}}
-        {% for error in serverform.errors.login %}
-        <span style="color: red;">[{{error}}]</span>
-        {% endfor %}
-
-        {{serverform.password(class_="input-block-level",placeholder="Password",type="password")}}
-        {% for error in serverform.errors.password %}
-        <span style="color: red;">[{{error}}]</span>
-        {% endfor %}
-
-
+        {{ render_field(serverform.name, class="input-block-level",placeholder="Name") }}
+        {{ render_field(serverform.address, class="input-block-level",placeholder="Address") }}
+        {{ render_field(serverform.login, class="input-block-level",placeholder="Login") }}
+        {{ render_field(serverform.password, class="input-block-level",placeholder="Password") }}
         <button class="btn btn-primary" type="submit">Submit</button>
 
       </form>
