--- a/app/templates/menu_top.html
+++ b/app/templates/menu_top.html
@@ -11,11 +11,11 @@
       <a class="brand" href="{{ url_for('home') }}">XiVO</a>
       <div class="nav-collapse collapse">
             <p class="navbar-text pull-right">
-              Logged in as <a href="#" class="navbar-link">{{ current_user.username }}</a>
+              Logged in as <a href="#" class="navbar-link">{{ current_user.username }}</a>&nbsp;&nbsp;
+              <a href="{{ url_for('login.logout') }}"><i class="icon-off icon-white"></i></a>
             </p>
         <ul class="nav">
           <li><a href="{{ url_for('home') }}">Home</a></li>
-          <li><a href="{{ url_for('login.logout') }}">Logout</a></li>
         </ul>
       </div>
     </div>
