--- a/app/server/templates/server/server.html
+++ b/app/server/templates/server/server.html
@@ -4,7 +4,7 @@
 <div class="container">
   <p class="text-right"><a class="btn btn-primary btn-small" href="{{ url_for('servers.server_add') }}"><i class="icon-plus icon-white"></i> Add</a></p>
   <table class="table table-bordered">
-    {% for s in servers %}
+    {% for s in servers_list %}
       <tr>
       <td>{{ s.name }}</td>
       <td>{{ s.address }}</td>
