--- a/app/templates/menu_left.html
+++ b/app/templates/menu_left.html
@@ -6,13 +6,9 @@
               <li class="nav-header">Configuration</li>
               <li class="active"><a href="{{url_for('servers.server')}}">Servers</a></li>
               <li class="nav-header">Plugins</li>
-              {% for p in plugins_menu %}
-                <li><a href="{{ p }}">{{ p }}</a></li>
+              {% for p in plugins_list %}
+                <li><a href="/{{ p }}">{{ p }}</a></li>
               {% endfor %}
-              <li class="nav-header">Sidebar</li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
             </ul>
           </div>
         </div>
