--- a/app/plugins/users/templates/users/users.html
+++ b/app/plugins/users/templates/users/users.html
@@ -1,6 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
 
-users
+Connecting to {{ server.address }}
+
+<div class="container">
+  <p class="text-right"><a class="btn btn-primary btn-small" href=""><i class="icon-plus icon-white"></i> Add</a></p>
+  <table class="table table-bordered">
+    {% for u in users %}
+      <tr>
+      <td>{{ u.callerid }}</td>
+      <td>{{ u.lastname }} {{ u.firstname }}</td>
+      <td>{{ u.username }}</td>
+      <td>{{ u.password }}</td>
+      <td>
+        <div class="btn-group">
+	  <a class="btn btn-primary btn-small" href="#"><i class="icon-circle-arrow-down icon-white"></i> Action</a>
+	  <a class="btn btn-primary btn-small dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+	  <ul class="dropdown-menu">
+	    <li><a href=""><i class="icon-pencil"></i> Edit</a></li>
+	    <li><a href=""><i class="icon-trash"></i> Delete</a></li>
+          </ul>
+        </div>
+      </td>
+      </tr>
+    {% endfor %}
+  </table>
+</div>
+
 
 {% endblock %}
