first user plugin with very minimalist informations WIP

--- a/app/plugins/users/templates/users/users.html
+++ b/app/plugins/users/templates/users/users.html
@@ -4,7 +4,7 @@
 Connecting to {{ server.address }}
 
 <div class="container">
-  <p class="text-right"><a class="btn btn-primary btn-small" href=""><i class="icon-plus icon-white"></i> Add</a></p>
+  <p class="text-right"><a class="btn btn-primary btn-small" href="{{url_for('users.user_add')}}"><i class="icon-plus icon-white"></i> Add</a></p>
   <table class="table table-bordered">
     {% for u in users %}
       <tr>
@@ -17,8 +17,8 @@ Connecting to {{ server.address }}
 	  <a class="btn btn-primary btn-small" href="#"><i class="icon-circle-arrow-down icon-white"></i> Action</a>
 	  <a class="btn btn-primary btn-small dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
 	  <ul class="dropdown-menu">
-	    <li><a href=""><i class="icon-pencil"></i> Edit</a></li>
-	    <li><a href=""><i class="icon-trash"></i> Delete</a></li>
+	    <li><a href="{{url_for('users.user_edit', id=u.id)}}"><i class="icon-pencil"></i> Edit</a></li>
+	    <li><a href="{{url_for('users.user_del', id=u.id)}}"><i class="icon-trash"></i> Delete</a></li>
           </ul>
         </div>
       </td>
