refactor and start core plugins for profil

--- a/app/templates/menu_top.html
+++ b/app/templates/menu_top.html
@@ -11,7 +11,10 @@
       <a class="brand" href="{{ url_for('home') }}">XiVO</a>
       <div class="nav-collapse collapse">
             <p class="navbar-text pull-right">
-              Logged in as <a href="#" class="navbar-link">{{ current_user.username }}</a>&nbsp;&nbsp;
+          {% if g.server %}
+              on {{ g.server.address }}&nbsp;&nbsp;
+          {% endif %}
+              Welcome <a href="{{url_for('profil.myprofil', id=current_user.id)}}" class="navbar-link">{{current_user.username}}</a>&nbsp;&nbsp;
               <a href="{{ url_for('login.logout') }}"><i class="icon-off icon-white"></i></a>
             </p>
         <ul class="nav">
