--- a/app/plugins/voicemails/templates/voicemails/voicemails.html
+++ b/app/plugins/voicemails/templates/voicemails/voicemails.html
@@ -1,29 +1,37 @@
 {% extends "base.html" %}
 {% block content %}
 
-Connecting to {{ server.address }}
-
 <div class="container">
+
+<div class="widget stacked widget-table action-table">
   <p class="text-right"><a class="btn btn-primary btn-small" href="{{url_for('voicemails.voicemail_add')}}"><i class="icon-plus icon-white"></i> Add</a></p>
   <table class="table table-bordered">
+<div class="widget-content">
+  <table class="table table-bordered table-striped table-highlight">
+    <thead>
+      <tr>
+        <th>Mailbox</th>
+        <th>Email</th>
+        <th>Password</th>
+      <th class="td-actions"></th>
+      </tr>
+    </thead>
+    <tbody>
     {% for v in voicemails %}
       <tr>
       <td>{{ v.mailbox }}</td>
       <td>{{ v.email }}</td>
       <td>{{ v.password }}</td>
-      <td>
-        <div class="btn-group">
-	  <a class="btn btn-primary btn-small" href="#"><i class="icon-circle-arrow-down icon-white"></i> Action</a>
-	  <a class="btn btn-primary btn-small dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
-	  <ul class="dropdown-menu">
-	    <li><a href="{{url_for('voicemails.voicemail_edit', id=v.id)}}"><i class="icon-pencil"></i> Edit</a></li>
-	    <li><a href="{{url_for('voicemails.voicemail_del', id=v.id)}}"><i class="icon-trash"></i> Delete</a></li>
-          </ul>
-        </div>
-      </td>
+      <td class="td-actions">
+        <a href="{{url_for('voicemails.voicemail_edit', id=v.id)}}" class="btn btn-small"><i class="btn-icon-only icon-edit"></i></a>
+        <a href="{{url_for('voicemails.voicemail_del', id=v.id)}}" class="btn btn-small"><i class="btn-icon-only icon-remove"></i></a>
+        </td>
       </tr>
     {% endfor %}
+    </tbody>
   </table>
+</div>
+
 </div>
 
 
