--- a/app/core/login/templates/login/login.html
+++ b/app/core/login/templates/login/login.html
@@ -6,7 +6,7 @@
       <form class="form-signin" method="post" name="login">
         {{ loginform.csrf_token }}
         <h2 class="form-signin-heading">Please sign in</h2>
-        {{ render_field(loginform.login, class="input-block-level",placeholder="Username") }}
+        {{ render_field(loginform.username, class="input-block-level",placeholder="Username") }}
         {{ render_field(loginform.password, class="input-block-level",placeholder="Password") }}
         {{ render_field(loginform.remember_me, class="checkbox") }} 
         <button class="btn btn-large btn-primary" type="submit">Sign in</button>
