--- a/app/core/profil/templates/profil/profil.html
+++ b/app/core/profil/templates/profil/profil.html
@@ -3,7 +3,80 @@
 
 <div class="container">
 
-Hello {{ current_user.username }} !
+<div class="row">
+  <div class="span8">      		
+    <div class="widget stacked ">
+      <div class="widget-header">
+         <h3>Your Account ({{ current_user.username }})</h3>
+      </div> 
+				
+      <div class="widget-content">
+        <div class="tabbable">
+          <ul class="nav nav-tabs">
+            <li class="active">
+              <a href="#profile" data-toggle="tab">Profile</a>
+            </li>
+          </ul>
+          <br>
+          <div class="tab-content">
+            <div class="tab-pane active" id="profile">
+              <form id="edit-profile" class="form-horizontal">
+              <fieldset>
+
+              <div class="control-group">											
+                <label class="control-label" for="username">Username</label>
+                  <div class="controls">
+                    <input class="input-medium disabled" id="username" value="{{ current_user.username }}" disabled="" type="text">
+                    <p class="help-block">Your username is for logging in and cannot be changed.</p>
+                  </div>
+              </div>
+
+              <div class="control-group">
+                <label class="control-label" for="displayname">Display name</label>
+                 <div class="controls">
+                   <input class="input-medium" id="displayname" value="{{ current_user.displayname }}" type="text">
+                 </div>
+              </div>
+
+              <div class="control-group">
+                <label class="control-label" for="email">Email</label>
+                 <div class="controls">
+                   <input class="input-medium" id="email" value="{{ current_user.email }}" type="text">
+                 </div>
+              </div>
+
+              <br><br>
+
+              <div class="control-group">
+                <label class="control-label" for="password1">Password</label>
+                <div class="controls">
+                  <input class="input-medium" id="password1" value="" type="password">
+                </div>
+              </div>
+
+              <div class="control-group">
+                <label class="control-label" for="password2">Confirm</label>
+                <div class="controls">
+                  <input class="input-medium" id="password2" value="" type="password">
+                </div>
+              </div>
+
+              <br>
+
+              <div class="form-actions">
+                <button type="submit" class="btn btn-primary">Save</button> 
+                <button class="btn">Cancel</button>
+              </div>
+
+              </fieldset>
+              </form>
+
+            </div>
+          </div>
+        </div>
+    </div>
+  </div>
+</div>
 
 </div>
 
