--- a/app/core/server/templates/server/server.html
+++ b/app/core/server/templates/server/server.html
@@ -1,30 +1,39 @@
 {% extends "base.html" %}
-{% set active_page = "server.server" %}
-
 {% block content %}
 
 <div class="container">
-  <p class="text-right"><a class="btn btn-primary btn-small" href="{{ url_for('servers.server_add') }}"><i class="icon-plus icon-white"></i> Add</a></p>
+
+<div class="widget stacked widget-table action-table">
+  <p class="text-right"><a class="btn btn-primary btn-small" href="{{url_for('servers.server_add')}}"><i class="icon-plus icon-white"></i> Add</a></p>
   <table class="table table-bordered">
+<div class="widget-content">
+  <table class="table table-bordered table-striped table-highlight">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Address</th>
+        <th>Login</th>
+        <th>Password</th>
+      <th class="td-actions"></th>
+      </tr>
+    </thead>
+    <tbody>
     {% for s in servers_list %}
       <tr>
       <td>{{ s.name }}</td>
       <td>{{ s.address }}</td>
       <td>{{ s.login }}</td>
       <td>{{ s.password }}</td>
-      <td>
-        <div class="btn-group">
-	  <a class="btn btn-primary btn-small" href="#"><i class="icon-circle-arrow-down icon-white"></i> Action</a>
-	  <a class="btn btn-primary btn-small dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
-	  <ul class="dropdown-menu">
-	    <li><a href="{{url_for('servers.server_edit', id=s.id)}}"><i class="icon-pencil"></i> Edit</a></li>
-	    <li><a href="{{url_for('servers.server_del', id=s.id)}}"><i class="icon-trash"></i> Delete</a></li>
-          </ul>
-        </div>
-      </td>
+      <td class="td-actions">
+        <a href="{{url_for('servers.server_edit', id=s.id)}}" class="btn btn-small"><i class="btn-icon-only icon-edit"></i></a>
+        <a href="{{url_for('servers.server_del', id=s.id)}}" class="btn btn-small"><i class="btn-icon-only icon-remove"></i></a>
+        </td>
       </tr>
     {% endfor %}
+    </tbody>
   </table>
+</div>
+
 </div>
 
 {% endblock %}
