--- a/app/plugins/users/templates/users/users_add.html
+++ b/app/plugins/users/templates/users/users_add.html
@@ -7,10 +7,10 @@
       <form class="form" method="post" name="user/add">
         {{ userform.csrf_token }}
         <h2 class="form">Add user</h2>
-        {{ render_field(userform.firstname, class="input-block-level",placeholder="Firstname") }}
-        {{ render_field(userform.lastname, class="input-block-level",placeholder="Lastname") }}
-        {{ render_field(userform.username, class="input-block-level",placeholder="Username") }}
-        {{ render_field(userform.password, class="input-block-level",placeholder="Password") }}
+        {{ render_field(userform.firstname, class="input-xlarge",placeholder="Firstname") }}
+        {{ render_field(userform.lastname, class="input-xlarge",placeholder="Lastname") }}
+        {{ render_field(userform.username, class="input-xlarge",placeholder="Username") }}
+        {{ render_field(userform.password, class="input-xlarge",placeholder="Password") }}
         <button class="btn btn-primary" type="submit">Submit</button>
 
       </form>
