--- a/app/plugins/voicemails/templates/voicemails/voicemails_add.html
+++ b/app/plugins/voicemails/templates/voicemails/voicemails_add.html
@@ -7,9 +7,9 @@
       <form class="form" method="post" name="voicemail/add">
         {{ voicemailform.csrf_token }}
         <h2 class="form">Add voicemail</h2>
-        {{ render_field(voicemailform.mailbox, class="input-block-level",placeholder="Mailbox") }}
-        {{ render_field(voicemailform.email, class="input-block-level",placeholder="Email") }}
-        {{ render_field(voicemailform.password, class="input-block-level",placeholder="Password") }}
+        {{ render_field(voicemailform.mailbox, class="input-xlarge",placeholder="Mailbox") }}
+        {{ render_field(voicemailform.email, class="input-xlarge",placeholder="Email") }}
+        {{ render_field(voicemailform.password, class="input-xlarge",placeholder="Password") }}
         <button class="btn btn-primary" type="submit">Submit</button>
 
       </form>
