--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,7 +1,1 @@
-
-<div id="footer">
-    <p class="pull-right"><img src="/static/img/Xivo.png"/> by <a href="http://avencall.com">Avencall</a>.&nbsp;&nbsp;&nbsp;&nbsp;</p>
-</div>
-
-</body>
-</html>
+<p class="pull-right"><img src="/static/img/Xivo.png"/></p>
