Supported now 3 roles, admin, manager and user, refactoring

--- a/app/core/profil/templates/profil/accounts.html
+++ b/app/core/profil/templates/profil/accounts.html
@@ -4,7 +4,7 @@
 <div class="container">
 
 <div class="widget stacked widget-table action-table">
-  <p class="text-right"><a class="btn btn-primary btn-small" href="{{url_for('profil.accounts')}}"><i class="icon-plus icon-white"></i> Add</a></p>
+  <p class="text-right"><a class="btn btn-primary btn-small" href="{{url_for('profil.account_add')}}"><i class="icon-plus icon-white"></i> Add</a></p>
   <table class="table table-bordered">
 <div class="widget-content">
   <table class="table table-bordered table-striped table-highlight">
@@ -25,8 +25,8 @@
       <td>{{ u.displayname }}</td>
       <td>{{ u.password }}</td>
       <td class="td-actions">
-        <a href="{{url_for('profil.accounts', id=u.id)}}" class="btn btn-small"><i class="btn-icon-only icon-edit"></i></a>
-        <a href="{{url_for('profil.accounts', id=u.id)}}" class="btn btn-small"><i class="btn-icon-only icon-remove"></i></a>
+        <a href="{{url_for('profil.account_edit', id=u.id)}}" class="btn btn-small"><i class="btn-icon-only icon-edit"></i></a>
+        <a href="{{url_for('profil.account_del', id=u.id)}}" class="btn btn-small"><i class="btn-icon-only icon-remove"></i></a>
         </td>
       </tr>
     {% endfor %}
