--- a/app/core/server/templates/server/server.html
+++ b/app/core/server/templates/server/server.html
@@ -18,7 +18,7 @@
       </tr>
     </thead>
     <tbody>
-    {% for s in servers_list %}
+    {% for s in servers %}
       <tr>
       <td>{{ s.name }}</td>
       <td>{{ s.address }}</td>
