--- a/app/core/profil/templates/profil/signup.html
+++ b/app/core/profil/templates/profil/signup.html
@@ -12,6 +12,7 @@
         {{ render_field(form.password, class="input-xlarge",placeholder="Password") }}
         {{ render_field(form.confirm, class="input-xlarge",placeholder="Password") }}
         {{ render_field(form.captcha, class="input-xlarge") }}
+        {{ render_field(form.agree) }}
         {{ render_field(form.submit, class="btn btn-primary") }}
       </form>
     </div>
