--- a/app/core/login/templates/login/login.html
+++ b/app/core/login/templates/login/login.html
@@ -4,11 +4,11 @@
 
     <div class="container">
       <form class="form-signin" method="post" name="login">
-        {{ loginform.csrf_token }}
+        {{ form.csrf_token }}
         <h2 class="form-signin-heading">Please sign in</h2>
-        {{ render_field(loginform.username, class="input-block-level",placeholder="Username") }}
-        {{ render_field(loginform.password, class="input-block-level",placeholder="Password") }}
-        {{ render_field(loginform.remember_me, class="checkbox") }} 
+        {{ render_field(form.username, class="input-block-level",placeholder="Username") }}
+        {{ render_field(form.password, class="input-block-level",placeholder="Password") }}
+        {{ render_field(form.remember_me, class="checkbox") }} 
         <button class="btn btn-large btn-primary" type="submit">Sign in</button>
         <br><br>
         <p>New account ? <a href="{{url_for('profil.signup')}}" class="btn btn-small">Sign up</a></p>
