--- a/app/templates/menu_top.html
+++ b/app/templates/menu_top.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="{{ url_for('home') }}">XiVO</a>
+      <a class="brand" href="{{ url_for('home.homepage') }}">XiVO</a>
       <div class="nav-collapse collapse">
             <p class="navbar-text pull-right">
           {% if g.server %}
@@ -18,7 +18,7 @@
               <a href="{{ url_for('login.logout') }}"><i class="icon-off icon-white"></i></a>
             </p>
         <ul class="nav">
-          <li><a href="{{ url_for('home') }}">Home</a></li>
+          <li><a href="{{ url_for('home.homepage') }}">Home</a></li>
         </ul>
         <ul class="nav pull-right">
           <li id="fat-menu" class="dropdown">
