--- a/app/core/login/templates/login/login.html
+++ b/app/core/login/templates/login/login.html
@@ -5,13 +5,14 @@
     <div class="container">
       <form class="form-signin" method="post" name="login">
         {{ form.csrf_token }}
-        <h2 class="form-signin-heading">Please sign in</h2>
+        <h2 class="form-signin-heading">{{ _('Please sign in') }}</h2>
         {{ render_field(form.username, class="input-block-level",placeholder="Username") }}
         {{ render_field(form.password, class="input-block-level",placeholder="Password") }}
         {{ render_field(form.remember_me, class="checkbox") }} 
-        <button class="btn btn-large btn-primary" type="submit">Sign in</button>
+        {{ render_field(form.language, class="input-small") }} 
+        <button class="btn btn-large btn-primary" type="submit">{{ _('Sign in') }}</button>
         <br><br>
-        <p>New account ? <a href="{{url_for('profil.signup')}}" class="btn btn-small">Sign up</a></p>
+        <p>{{ _('New account ?') }} <a href="{{url_for('profil.signup')}}" class="btn btn-small">{{ _('Sign up') }}</a></p>
       </form>
 
     </div>
