--- a/app/core/profil/templates/profil/profil.html
+++ b/app/core/profil/templates/profil/profil.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+    {% from "forms/macros.html" import render_field %}
+
 
 <div class="container">
 
@@ -14,67 +16,31 @@
         <div class="tabbable">
           <ul class="nav nav-tabs">
             <li class="active">
-              <a href="#profile" data-toggle="tab">Profile</a>
+              <a href="#profil" data-toggle="tab">Profil</a>
             </li>
           </ul>
           <br>
           <div class="tab-content">
-            <div class="tab-pane active" id="profile">
-              <form id="edit-profile" class="form-horizontal">
+            <div class="tab-pane active" id="profil">
+              <form id="form" class="form-horizontal">
+              {{ form.csrf_token }}
               <fieldset>
-
-              <div class="control-group">											
-                <label class="control-label" for="username">Username</label>
-                  <div class="controls">
-                    <input class="input-medium disabled" id="username" value="{{ current_user.username }}" disabled="" type="text">
-                    <p class="help-block">Your username is for logging in and cannot be changed.</p>
-                  </div>
-              </div>
-
-              <div class="control-group">
-                <label class="control-label" for="displayname">Display name</label>
-                 <div class="controls">
-                   <input class="input-medium" id="displayname" value="{{ current_user.displayname }}" type="text">
-                 </div>
-              </div>
-
-              <div class="control-group">
-                <label class="control-label" for="email">Email</label>
-                 <div class="controls">
-                   <input class="input-medium" id="email" value="{{ current_user.email }}" type="text">
-                 </div>
-              </div>
-
-              <br><br>
-
-              <div class="control-group">
-                <label class="control-label" for="password1">Password</label>
-                <div class="controls">
-                  <input class="input-medium" id="password1" value="" type="password">
-                </div>
-              </div>
-
-              <div class="control-group">
-                <label class="control-label" for="password2">Confirm</label>
-                <div class="controls">
-                  <input class="input-medium" id="password2" value="" type="password">
-                </div>
-              </div>
-
-              <br>
-
-              <div class="form-actions">
-                <button type="submit" class="btn btn-primary">Save</button> 
-                <button class="btn">Cancel</button>
-              </div>
-
+                {{ render_field(form.username, class="input-medium",placeholder="Username", disabled="disabled") }}
+                <p class="help-block">Your username is for logging in and cannot be changed.</p>
+                {{ render_field(form.displayname, class="input-medium",placeholder="Display name") }}
+                {{ render_field(form.email, class="input-medium",placeholder="Email") }}
+                <br><br>
+                {{ render_field(form.password, class="input-medium",placeholder="Password") }}
+                <br>
+                {{ render_field(form.submit, class="btn btn-primary") }}
               </fieldset>
               </form>
-
             </div>
           </div>
         </div>
+      </div>
     </div>
+
   </div>
 </div>
 
