--- a/app/core/profil/templates/profil/account_edit.html
+++ b/app/core/profil/templates/profil/account_edit.html
@@ -6,13 +6,13 @@
 
       <form class="form" method="post">
         {{ form.csrf_token }}
-        <h2 class="form">Edit account</h2>
-        {{ render_field(form.username, class="input-xlarge",placeholder="Username", disabled="disabled") }}
-        {{ render_field(form.email, class="input-xlarge",placeholder="Email") }}
-        {{ render_field(form.displayname, class="input-xlarge",placeholder="Display name") }}
-        {{ render_field(form.password, class="input-xlarge",placeholder="Password") }}
+        <h2 class="form">{{ _('Edit account') }}</h2>
+        {{ render_field(form.username, class="input-xlarge", disabled="disabled") }}
+        {{ render_field(form.email, class="input-xlarge") }}
+        {{ render_field(form.displayname, class="input-xlarge") }}
+        {{ render_field(form.password, class="input-xlarge") }}
         {{ render_field(form.role, class="input-xlarge") }}
-        <button class="btn btn-primary" type="submit">Submit</button>
+        {{ render_field(form.submit, class="btn btn-primary") }}
       </form>
 
     </div>
