--- a/app/core/market/templates/market/market.html
+++ b/app/core/market/templates/market/market.html
@@ -8,10 +8,10 @@
    <table class="table table-bordered table-striped table-highlight">
      <thead>
       <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Author</th>
-        <th>Licence</th>
+        <th>{{ _('Name') }}</th>
+        <th>{{ _('Description') }}</th>
+        <th>{{ _('Author') }}</th>
+        <th>{{ _('Licence') }}</th>
         <th class="td-actions"></th>
       </tr>
     </thead>
