--- a/app/core/servers/templates/server/server.html
+++ b/app/core/servers/templates/server/server.html
@@ -4,16 +4,16 @@
 <div class="container">
 
 <div class="widget stacked widget-table action-table">
-  <p class="text-right"><a class="btn btn-primary btn-small" href="{{url_for('servers.server_add')}}"><i class="icon-plus icon-white"></i> Add</a></p>
+  <p class="text-right"><a class="btn btn-primary btn-small" href="{{url_for('servers.server_add')}}"><i class="icon-plus icon-white"></i> {{_('Add') }}</a></p>
   <table class="table table-bordered">
 <div class="widget-content">
   <table class="table table-bordered table-striped table-highlight">
     <thead>
       <tr>
-        <th>Name</th>
-        <th>Address</th>
-        <th>Login</th>
-        <th>Password</th>
+        <th>{{ _('Name') }}</th>
+        <th>{{ _('Address') }}</th>
+        <th>{{ _('Login') }}</th>
+        <th>{{ _('Password') }}</th>
       <th class="td-actions"></th>
       </tr>
     </thead>
