--- a/app/templates/home_server.html
+++ b/app/templates/home_server.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container">
-Hello you're connected to {{ g.server.name }} ({{ g.server.address }}), have fun ! :)
+{{ _('Hello you\'re connected to') }} {{ g.server.name }} ({{ g.server.address }}), {{ _('have fun ! :)') }}
 </div>
 
 {% endblock %}
