--- a/app/core/profil/templates/profil/profil.html
+++ b/app/core/profil/templates/profil/profil.html
@@ -22,7 +22,7 @@
           <br>
           <div class="tab-content">
             <div class="tab-pane active" id="profil">
-              <form id="form" class="form">
+              <form class="form" method="post">
               {{ form.csrf_token }}
               <fieldset>
                 {{ render_field(form.username, class="input-xlarge", disabled="disabled") }}
